# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

file(GLOB_RECURSE _Passes_Srcs *.cpp)
#PTO_Fwk_Debug_Source_List(NAME "_Passes_Srcs" LIST ${_Passes_Srcs} DETAIL OFF)

if (ENABLE_FEATURE_PYTHON_FRONT_END)
        target_sources(tile_fwk_interface PRIVATE ${_Passes_Srcs})
else ()
        add_library(tile_fwk_passes SHARED)
        target_sources(tile_fwk_passes PRIVATE ${_Passes_Srcs})
        target_link_libraries(tile_fwk_passes
                PUBLIC
                    json
                    c_sec
                PRIVATE
                    intf_pub_cxx17
                    tile_fwk_intf_pub
                    dl
                    Threads::Threads
        )
        PTO_Fwk_AnalysisTargetHeaderFiles(TARGET tile_fwk_passes)
        #PTO_Fwk_AnalysisTargetSymbols(TARGET tile_fwk_passes)
endif ()
